# ActingDoll

./: .gitattribute  .gitattributes  .gitignore  ActingDoll.code-workspace  GettingStart.md  LICENSE  README.md  claude_desktop_config.example.json  pyproject.toml
config/: config.yaml
docs/開発資料/: Live2DCubismSDKの更新について.md  websocket_serverについて.md
json_sample/: claude_desktop_config.example.json  mcp.example.json
src/: config.yaml
src/Cubism/: copy_from_CubismWebSamples.py  update_model_dirs.py
src/Cubism/Resources/: README.md  copy_from_CubismWebSamples.py
src/CubismContainer/: README.md  __init__.py  cubism_container.py  pyproject.toml  update_model_dirs.py
src/CubismContainer/volume/: Dockerfile  Dockerfile_dev  Dockerfile_voicevox_cpu  Dockerfile_voicevox_nvidia
src/acting_doll/: __init__.py  moc3manager.py  server.py  server_websocket.py  websocket_server.py
src/adapter/: build.sh  copy_resources.js  start.sh
src/adapter/acting_doll/: API.html  acting_doll.css  controller.html  controller_doll.css  copy_resources.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mts
src/adapter/acting_doll/css/: acting_doll.css  controller_doll.css  main.css
src/adapter/acting_doll/src/: controller.ts  cubismdefaultparameterid_custom.ts  cubismdefaultparameterid_v3.ts  lappdefine.ts  lappdelegate.ts  lappglmanager.ts  lapplive2dmanager.ts  lappmodel.ts  lappmultilingual.ts  lapppal.ts  lappsubdelegate.ts  lapptexturemanager.ts  lappui.ts  lappview.ts  lappwavfilehandler.ts  main.ts  websocketclient.ts
src/adapter/acting_doll/src/addons/: backgroundcolorcontroller.ts  controller.ts  cubismdefaultparameterid_custom.ts  lappmultilingual.ts  websocketclient.ts
src/adapter/acting_doll/src/base/: lappdefine.ts  lappdelegate.ts  lappglmanager.ts  lapplive2dmanager.ts  lappmodel.ts  lapppal.ts  lappsubdelegate.ts  lappui.ts  lappview.ts  lappwavfilehandler.ts
src/adapter/controller/: README.md  controller.ts  lappmodel.ts  lappui.ts
src/adapter/resources/: update_model_dirs.py
src/adapter/server/: README.md  SECURITY.md  __init__.py  acting_doll_mcp.py  acting_doll_server.py  build.sh  client.py  handler_cubism_controller.py  handler_mcp.py  mcp_client.py  mcp_server.py  moc3manager.py  pyproject.toml  security_config.py  server.py  start.sh  update_model.py  websocket_server.py
src/adapter/server/modules/: handler_cubism_controller.py  moc3manager.py
src/controller/: lappdefine.ts  lappdelegate.ts  lapplive2dmanager.ts  lappmodel.ts  lappui.ts  lappview.ts  main.ts  websocketclient.ts
src/model/: copy_resources.js  package-lock.json
src/model/src/: lappdefine.ts
src/models/: update_model_dirs.py
src/node_package/: copy_resources.js  index.html  package-lock.json  vite.config.mts
tests/: README.md  conftest.py  test_security_config.py  test_server.py  test_websocket_integration.py
tests/test_mcp/: __init__.py  test_client.py  test_server.py
tests/test_websocket/: README.md  client.py  test_command.py  test_security_config.py  test_websocket_integration.py
tools/CubismContainer/: CubismContainer.py  Dockerfile  README.md  build.py  clean.py  config.yaml  create_container.py  exec.py  run.py  start.py  start_demo.py
tools/CubismContainer/volume/: Dockerfile
