[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acting-doll"
version = "0.1.0"
description = "MCP server to control Live2D models through LLM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "CodeneAria"}
]
keywords = ["mcp", "live2d", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.23.0",
    "httpx>=0.28.0",
    "websockets>=13.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
acting-doll = "adapter.server.websocket_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/adapter/acting_doll"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "src/adapter/server",
]
