[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acting-doll"
version = "0.2.1"
description = "MCP server to control Live2D models through LLM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "CodeneAria"}
]
keywords = ["mcp", "live2d", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0.3",
    "acting-doll-server",
    "cubism-container"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0"
]

[project.scripts]
acting-doll = "cubism_container:main"

[tool.hatch.build.targets.wheel]
packages = ["src/adapter/server"]

[tool.uv.sources]
acting-doll-server = {workspace = true}
cubism-container = {workspace = true}

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.workspace]
members = [
    "src/adapter/server",
    "src/CubismContainer",
]
