[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cubism-container"
version = "0.2.0"
description = "Unified Docker container management script for Cubism SDK Web"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
]

[tool.hatch.build.targets.wheel]
include = [
    "volume/Dockerfile",
]
[tool.setuptools.package-data]
cubism-container = ["volume/Dockerfile"]
