[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cubism-container"
version = "0.2.0"
description = "Unified Docker container management script for Cubism SDK Web"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "CodeneAria"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyyaml"
]

[project.scripts]
cubism-container = "cubism_container:main"

[tool.hatch.build.targets.wheel]
include = [
    "cubism_container.py",
    "volume/Dockerfile",
    "*.py"
]
[tool.setuptools.package-data]
cubism-container = ["volume/Dockerfile"]
