[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acting-doll-server"
version = "0.1.0"
description = "WebSocket and MCP server for controlling Live2D models through LLM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "CodeneAria"}
]
keywords = ["mcp", "live2d", "llm", "ai", "websocket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "websockets>=13.0",
    "mcp>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
all = [
    "acting-doll-server[dev]",
]

[project.scripts]
acting-doll-server = "websocket_server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

