[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acting-doll-server"
version = "0.2.1"
description = "'acting-doll-server' is a server application that allows you to control Live2D models using WebSocket and MCP protocols. It provides a interface for sending commands to the server, which then translates them into actions for the Live2D models."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "CodeneAria"}
]
keywords = ["mcp", "live2d", "llm", "ai", "websocket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.14.5",
    "websockets>=13.0"
]

[project.optional-dependencies]
dev = [
]

[project.scripts]
acting-doll-server = "acting_doll_server:main"
acting-doll-mcp = "acting_doll_mcp:main"
update-model = "update_model:run_update_model"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

